[package]
name = "jupiter-sdk"
version = "0.1.5"
description = "Created with IDLGen"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "jupiter_sdk"

[features]
rpc = []
i11n = ["anchor-i11n"]
cpi = []
events = []
default = ["rpc", "i11n", "cpi", "events"]

[dependencies]
anchor-lang = "0.30.0"serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
anchor-i11n = { optional = true, version = "0.1.0"}